--- a/src/Blazor.Wasm/Pages/Index.razor
+++ b/src/Blazor.Wasm/Pages/Index.razor
@@ -1,11 +1,112 @@
 ﻿@page "/"
 @using SixLabors.ImageSharp
 @using CGAOB
+@using System.Numerics
+@using System.Collections
 @inject IJSRuntime JSRuntime
 @code {
 
+    private const int DOUBLE_MULTIPLIER = 10000000;
+    private readonly BigInteger HORIZONTAL_INCREMENT = new BigInteger(1);
+    private readonly BigInteger VERTICAL_INCREMENT = BigInteger.Pow(4, 160);
+    private readonly BigInteger FIRST_INDEX = BigInteger.Zero;
+    private readonly BigInteger LAST_INDEX = BigInteger.Pow(4, 32000);
+    private string ImageAddress => CurrentIndex.ToString();
+    private Random rnd = new Random();
+
+    private BigInteger CurrentIndex { get; set; }
+
+    private async Task OnLeftArrowClicked()
+    {
+        await MoveIndex(-HORIZONTAL_INCREMENT);
+    }
+    
+    private async Task OnDoubleLeftArrowClicked()
+    {
+        await MoveIndex(-HORIZONTAL_INCREMENT * DOUBLE_MULTIPLIER);
+    }
+
+    private async Task OnRightArrowClicked()
+    {
+        await MoveIndex(HORIZONTAL_INCREMENT);
+    }
+
+    private async Task OnDoubleRightArrowClicked()
+    {
+        await MoveIndex(HORIZONTAL_INCREMENT * DOUBLE_MULTIPLIER);
+    }
+    
+    private async Task OnUpArrowClicked()
+    {
+        await MoveIndex(-VERTICAL_INCREMENT);
+    }
+    
+    private async Task OnDoubleUpArrowClicked()
+    {
+        await MoveIndex(-VERTICAL_INCREMENT * DOUBLE_MULTIPLIER);
+    }
+
+    private async Task OnDownArrowClicked()
+    {
+        await MoveIndex(VERTICAL_INCREMENT);
+    }
+    
+    private async Task OnDoubleDownArrowClicked()
+    {
+        await MoveIndex(VERTICAL_INCREMENT * DOUBLE_MULTIPLIER);
+    }
+
+    private async Task MoveIndex(BigInteger distance)
+    {
+        var newIndex = CurrentIndex + distance;
+        if (newIndex < FIRST_INDEX) newIndex = FIRST_INDEX;
+        if (newIndex > LAST_INDEX) newIndex = LAST_INDEX;
+        CurrentIndex = newIndex;
+        await UpdateImage();
+    }
+
+    private async Task GotoIndex(BigInteger index)
+    {
+        CurrentIndex = index;
+        await UpdateImage();
+    }
+
+    private async Task UpdateImage()
+    {
+        Loading = true;
+        await Task.Run(async () =>
+        {
+            await GenerateImageFromCurrentIndex();
+        });
+        Loading = false;
+    }
+
+    private async Task GenerateImageFromCurrentIndex()
+    {
+        var bytes = CurrentIndex.ToByteArray(true, false);
+        var target = _imageWidth * _imageHeight;
+        var output = new byte[target];
+
+        var inIndex = 0;
+        var outIndex = 0;
+        while (inIndex < bytes.Length)
+        {
+            var inByte = bytes[inIndex];
+            
+            output[outIndex + 0] = (byte)((inByte & 0b_0000_0011) >> 0);
+            output[outIndex + 1] = (byte)((inByte & 0b_0000_1100) >> 2);
+            output[outIndex + 2] = (byte)((inByte & 0b_0011_0000) >> 4);
+            output[outIndex + 3] = (byte)((inByte & 0b_1100_0000) >> 6);
+
+            inIndex++;
+            outIndex += 4;
+        }
+        
+        await GenerateImage(output);
+    }
+
     private string? Image64 { get; set; }
-    private string? ImageAddress { get; set; }
+
     private int ActivePalette { get; set; } = 0;
     private readonly int _imageWidth = 160;
     private readonly int _imageHeight = 200;
@@ -17,8 +118,12 @@
 
     protected override async Task OnInitializedAsync()
     {
+        CurrentIndex = BigInteger.Zero;
+        
+
         ActivePalette = new Random().Next(3);
-        await GenerateRandomImage();
+        //await GenerateRandomImage();
+        await UpdateImage();
         await base.OnInitializedAsync();
     }
 
@@ -50,18 +155,7 @@
     {
         ActivePalette++;
         if (ActivePalette > 2) ActivePalette = 0;
-        await GenerateImageFromAddress(ImageAddress);
-    }
-
-    private async Task GenerateImageFromAddress(string address)
-    {
-        Loading = true;
-        await Task.Run(async () =>
-        {
-            var bytes = CompressionHelper.DecompressImageData(address);
-            await GenerateImage(bytes);
-        });
-        Loading = false;
+        await UpdateImage();
     }
 
     private async Task OnClickGenerateRandomImage()
@@ -74,17 +168,10 @@
         Loading = false;
     }
 
-    private async Task GenerateRandomImage(int? seed = null)
+    private async Task GenerateRandomImage()
     {
-        var rnd = seed.HasValue ? new Random(seed.Value) : new Random();
-        var target = _imageWidth * _imageHeight;
-        var bytes = new byte[target];
-        for (var i = 0; i < target; i++)
-        {
-            bytes[i] = (byte)rnd.Next(4);
-        }
-        
-        await GenerateImage(bytes);
+        var randomIndex = rnd.NextBigInteger(FIRST_INDEX, LAST_INDEX);
+        await GotoIndex(randomIndex);
     }
     
     private async Task GenerateImage(byte[] bytes)
@@ -99,7 +186,6 @@
 
         var response = ImageHelper.GenerateImage(bytes, palette, _imageWidth, _imageHeight);
         Image64 = response.Base64Image;
-        ImageAddress = response.Address;
 
     }
 
@@ -125,12 +211,18 @@
 
     private async Task OnImportAddressClick()
     {
+        
         if(string.IsNullOrEmpty(ImportImageAddress)) return;
-        Loading = true;
-        await GenerateImageFromAddress(ImportImageAddress);
-        Loading = false;
+
+        BigInteger output;
+        if (!BigInteger.TryParse(ImportImageAddress, out output))
+        {
+            return;
+        }
+
         ImportImageAddress = null;
         ShowImport = false;
+        await GotoIndex(output);
     }
     
     private async Task CopyTextToClipboard()
@@ -153,12 +245,11 @@
 <PageTitle>Color Graphics Adapter of Babel</PageTitle>
 
 <div class="flex flex-col h-screen items-center justify-center bg-gray-800">
-    
     <div class="rounded-xl overflow-hidden inline-flex flex-col border-gray-500 shadow-black-xl relative ">
         <div class="bg-gray-600 p-3">
             <div class="flex">
                 <div class="flex-1 flex gap-1">
-                    <button type="button" class="button" @onclick="OnClickGenerateRandomImage">
+                    <button type="button" class="button" @onclick="OnClickGenerateRandomImage" title="Random image">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 512 512" stroke="currentColor" stroke-width="2" fill="currentColor">
                             <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M448 341.37V170.61A32 32 0 00432.11 143l-152-88.46a47.94 47.94 0 00-48.24 0L79.89 143A32 32 0 0064 170.61v170.76A32 32 0 0079.89 369l152 88.46a48 48 0 0048.24 0l152-88.46A32 32 0 00448 341.37z"/>
                             <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M69 153.99l187 110 187-110M256 463.99v-200"/>
@@ -179,7 +270,7 @@
 
                 </div>
                 <div class="flex-0 flex gap-1">
-                    <button class="button" type="button" @onclick="OnOpenExportClick">
+                    <button class="button" type="button" @onclick="OnOpenExportClick" title="Export Image">
                         @if (JustCopied)
                         {
                             <span>Copied</span>
@@ -191,7 +282,7 @@
                             </svg>    
                         }
                     </button>
-                    <button class="button" type="button" @onclick="OnOpenImportClick">
+                    <button class="button" type="button" @onclick="OnOpenImportClick" title="Import Image">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"/>
                         </svg>
@@ -201,10 +292,79 @@
             
         </div>
         <div class="bg-gray-700 p-3">
-            @if (!string.IsNullOrEmpty(Image64))
-            {
-                <img src="@Image64" style="width: 640px; height: 400px; image-rendering: pixelated;" alt="Generated CGA image of babel"/>
-            }
+            
+            <div class="flex flex-col items-center justify-center p-1 text-gray-200">
+                <button type="button"
+                        @onclick="OnDoubleUpArrowClicked">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l7.5-7.5 7.5 7.5m-15 6l7.5-7.5 7.5 7.5" />
+                    </svg>
+                </button>
+                <button type="button"
+                        @onclick="OnUpArrowClicked">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
+                    </svg>
+                </button>
+                
+            </div>
+            <div class="flex">
+                <div class="flex-0 flex p-1 flex items-center justify-center text-gray-200 gap-1">
+                    <button type="button"
+                            @onclick="OnDoubleLeftArrowClicked">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+                        </svg>
+
+                    </button>
+                    <button type="button"
+                            @onclick="OnLeftArrowClicked">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M18.75 19.5l-7.5-7.5 7.5-7.5m-6 15L5.25 12l7.5-7.5" />
+                        </svg>
+                    </button>
+                    
+                </div>
+                <div class="flex-1">
+                    @if (!string.IsNullOrEmpty(Image64))
+                    {
+                        <img src="@Image64" style="width: 640px; height: 400px; image-rendering: pixelated;" alt="Generated CGA image of babel"/>
+                    }
+                </div>
+                <div class="flex-0 flex p-1 items-center justify-center text-gray-200 gap-1">
+                    <button type="button"
+                            @onclick="OnRightArrowClicked">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                        </svg>
+                    </button>
+                    <button type="button"
+                            @onclick="OnDoubleRightArrowClicked">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 4.5l7.5 7.5-7.5 7.5m-6-15l7.5 7.5-7.5 7.5" />
+                        </svg>
+                    </button>
+                </div>
+                
+            </div>
+            <div class="flex flex-col items-center justify-center p-1 text-gray-200">
+                <button type="button"
+                        @onclick="OnDownArrowClicked">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                    </svg>
+ 
+                </button>
+                <button type="button"
+                        @onclick="OnDoubleDownArrowClicked">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
+                    </svg>
+                </button>
+            </div>
+            
+            
+            
         </div>
         
         @if (ShowExport)
